# waymca

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_NOTE.md  INSTALL.md  README.md  SCRIPTS.md  STATUS.md  SUMMARY.md  TECHNICAL.md  VERIFICATION.md  build.sh  install-cpp.sh  install-local.sh  install.sh  metadata.json  uninstall-cpp.sh  uninstall-local.sh  uninstall.sh
.github/workflows/: build.yml
contents/code/: main.js
contents/config/: main.xml  waymca_config.desktop
contents/shaders/: waymca.frag  waymca_core.frag
contents/ui/: config.qml  config.ui  main.qml
data/: CMakeLists.txt  waymca.json
data/shaders/: waymca.frag
reference/: sjovs_v17i2_4232.md
src/: CMakeLists.txt  main.cpp  metadata.json  waymca.cpp  waymca.frag  waymca.h  waymca.kcfg  waymca.kcfgc  waymca_config.cpp  waymca_config.h  waymca_config.ui  waymcaconfig.kcfgc
